--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Myblog
+
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/admin
+
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.mapper-locations=classpath:/mapper/*.xml
